syntax = "proto3";

package biz;

service Archive {
    rpc Search (SearchRequest) returns (Reply) {}
    rpc Filter (FilterRequest) returns (Reply) {}
    rpc CheckValid (CheckValidRequest) returns (Reply) {}
    rpc CheckValidWithId (CheckValidWithIdRequest) returns (Reply) {}

    rpc Save (SaveRequest) returns (Reply) {}
    rpc Get (GetRequest) returns (Reply) {}
    rpc Update (UpdateRequest) returns (Reply) {}
    rpc Remove (RemoveRequest) returns (Reply) {}

    rpc TransferIn (TransferInRequest) returns (Reply) {}
}

message SearchRequest { string filter = 1; }

message FilterRequest { string filter = 1; }

message CheckValidRequest {
    string sn = 1;
    string id_card = 2;
}

message CheckValidWithIdRequest {
    int32 id = 1;
    string sn = 2;
    string id_card = 3;
}

message SaveRequest {
    string uuid = 1;
    string sn = 2;
    string id_card = 3;
    string name = 4;
    string doc = 5;
}

message GetRequest {
    int32 id = 1;
    string uuid = 2;
}

message UpdateRequest {
    int32 id = 1;
    string uuid = 2;
    string id_card = 3;
    string name = 4;
    string doc = 5;
}

message RemoveRequest { uint32 id = 1; string uuid = 2; }

message TransferInRequest {
    int32 id = 1;
    string uuid = 2;
    string sn = 3;
    string sn_repeal = 4;
    string id_card = 5;
    string name = 6;
    string doc = 7;
}

message Reply { string data = 1; }
